<resources>
    <string name="app_name">Tower Defense</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_medium">Medium</string>
    <string name="difficulty_hard">Hard</string>

    <string name="difficulty_easy_description">more lives - more money - weaker enemies</string>
    <string name="difficulty_medium_description">normal settings</string>
    <string name="difficulty_hard_description">less lives - less money - strong enemies</string>

    <string name="stats_maxWave">Max Wave:</string>
    <string name="stats_enemiesKilled">Enemies killed:</string>
    <string name="stats_builtTowers">Built Towers:</string>
    <string name="stats_upgrades">Upgrades:</string>
    <string name="stats_moneySpent">Money spent:</string>

    <string name="zero_number">0</string>
    <string name="left_angle_bracket"><![CDATA[<]]></string>
    <string name="right_angle_bracket"><![CDATA[>]]></string>

    <string name="startscreen_play">PLAY</string>
    <string name="startscreen_logo_contentDescription">Tower Defense Logo</string>

    <string name="wave_title">Wave:&#160;</string>
    <string name="difficulty">difficulty</string>
    <string name="position">position</string>

    <string name="towerDamage">towerDamage</string>
    <string name="towerRange">towerRange</string>
    <string name="towerFireRate">towerFireRate</string>
    <string name="towerCost">towerCost</string>
    <string name="towerDrawable">towerDrawable</string>
    <string name="towerLevel">towerLevel</string>
    <string name="towerType">towerType</string>
    <string name="towerUpgrCost">towerUpgrCost</string>
    <string name="towerUpgrDamage">towerUpgrDamage</string>
    <string name="towerUpgrRange">towerUpgrRange</string>
    <string name="towerUpgrFireRate">towerUpgrFireRate</string>
</resources>
